objects/copado__Deployment__c.object
<CustomObject>
    <fields>
        <fullName>copadoAiHelper__Copado_AI_Companion_Link__c</fullName>
        <description>Link to open Copado AI Companion</description>
        <formula>HYPERLINK(&quot;/flow/copadoAiHelper/Copado_DevOps_AI_Companion?recordId=&quot;&amp;Id, &quot;[Open Chat]&quot; ,&quot;_blank&quot;)</formula>
        <inlineHelpText>Link to open Copado AI Companion</inlineHelpText>
        <label>Copado AI Companion Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only Active Templates are available when searching for them, for example in deployment steps</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__ApiName__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is a mandatory field if you intend to publish your automation template as copado extension package</inlineHelpText>
        <label>Api Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Attach_Deployment_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach Deployment File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Build_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Task</label>
        <referenceTo>copado__Build_Task__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <formula>IF(copado__Deployment_Jobs_Count__c&gt;0,
copado__Count_Completed__c /  copado__Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Count_Completed__c</fullName>
        <label># Completed</label>
        <summarizedField>copado__Step__c.copado__Count_Completed__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Date__c</fullName>
        <inlineHelpText>When this need to be deployed</inlineHelpText>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Deployed__c</fullName>
        <formula>IF(copado__Deployment_Jobs_Count__c &gt; 0,
copado__SUM_Deployed__c / copado__Deployment_Jobs_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Completed_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated when the Deployment Completed email has been sent to prevent subsequent notifications until this marker has been reset.</description>
        <label>Deployment Completed email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Jobs_Count__c</fullName>
        <label>Deployment Jobs Count</label>
        <summarizedField>copado__Step__c.copado__Org_Count__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Last_Step__c</fullName>
        <label>Deployment Last Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Source_Type__c</fullName>
        <label>Deployment Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_command_sent__c</fullName>
        <label>Deployment command sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Do_Not_Update_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Update Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Context__c</fullName>
        <label>Execution Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                    <default>true</default>
                    <label>Deployment</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                    <isActive>false</isActive>
                    <label>Commit</label>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                    <isActive>false</isActive>
                    <label>Promotion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Flag_Status__c</fullName>
        <formula>CASE( copado__Status__c, &quot;Completed Successfully&quot;, &quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-check.png&quot;,
&quot;In progress&quot;, &quot;/img/loading.gif&quot;,
&quot;Completed with Errors&quot;, &quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-cross.png&quot;,
&quot;/resource/&quot; + IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)
+ &quot;SetupDashboardIcons/PipelineSvgIcons/pipeline-paused.png&quot;)</formula>
        <label>Flag Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__From_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Credential</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>copado__Org__c.CreatedById</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Deployments (From Credential)</relationshipLabel>
        <relationshipName>Deployments_From_Org</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Git_Repository__c</fullName>
        <formula>IF(NOT(ISBLANK(copado__Promotion__r.copado__Project__c)), copado__Promotion__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c,  copado__Promotion__r.copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c )</formula>
        <label>Git Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Deployment_Execution_Id__c</fullName>
        <label>Last Deployment Execution Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Deployments (Parent Deployment)</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Paused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to decide if there is a pending manual item on deployment.</description>
        <inlineHelpText>This field is auto populated when a manual task is pending on deployment.</inlineHelpText>
        <label>Paused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <formula>copado__Promotion__r.copado__Platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Rolled_back_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the original deployment that was rolled back for reporting purposes</description>
        <inlineHelpText>Identifies the original deployment that was rolled back for reporting purposes</inlineHelpText>
        <label>Rolled back Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Deployments (Rolled back Deployment)</relationshipLabel>
        <relationshipName>RolledBackDeployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>copado__Step__c.copado__SUM_Deployed__c</summarizedField>
        <summaryForeignKey>copado__Step__c.copado__Deployment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Schedule__c</fullName>
        <label>Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deploy now</fullName>
                </value>
                <value>
                    <fullName>Deploy later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Send_Deployment_Complete_email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When the deployment completes an email will be sent to the owner of the deployment informing them of the status. Uncheck this checkbox to not receive such an email.</inlineHelpText>
        <label>Send Deployment Complete email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Server_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_260</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Server_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Source_Environment__c</fullName>
        <formula>copado__From_Org__r.copado__Environment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
                <value>
                    <fullName>Merge Conflict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The automation template that defined the steps of this deployment.</inlineHelpText>
        <label>Template</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Template Execution</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>EbikeModules</fullName>
        <columns>NAME</columns>
        <columns>copado__Date__c</columns>
        <columns>copado__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Ebike Module</value>
        </filters>
        <label>Ebike Modules</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>copado__Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Deployed__c</columns>
        <columns>copado__Completed__c</columns>
        <columns>copado__From_Org__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <recordTypes>
        <fullName>copado__Advanced_multi_step</fullName>
        <active>true</active>
        <description>Create multiple types of deployment steps. (Technical knowledge needed)</description>
        <label>Advanced (multi-step)</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Automation_Template</fullName>
        <active>true</active>
        <description>Group of steps to be executed in the future.</description>
        <label>Automation Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Data_Deployment</fullName>
        <active>true</active>
        <description>Select a Data Template to be deployed in a point and click process.</description>
        <label>Data Deployment</label>
    </recordTypes>
    <recordTypes>
        <fullName>copado__Metadata_Deployment</fullName>
        <active>true</active>
        <description>Select the metadata manually to be deployed in a point and click process.</description>
        <label>Metadata Deployment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>